kubernetes/base/service-mesh/istio-ambient-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio.io/dataplane-mode: ambient
    app.kubernetes.io/component: service-mesh
    app.kubernetes.io/part-of: oneinchmarket
    app.kubernetes.io/managed-by: kustomize
